@@ -63,7 +63,7 @@ The APR::Request::Cookie module provides base methods
 for interfacing with libapreq2's cookie API.  It also provides
 a few utility functions and constants.
 
-This manpage documents version 2.11
+This manpage documents version 2.12
 of the APR::Request::Cookie package.
 
 
