@@ -16,7 +16,7 @@ APR::Request::Error - wrapper for libapreq2's error API.
 
 =head1 DESCRIPTION
 
-This manpage documents version 2.11
+This manpage documents version 2.12
 of the APR::Request::Error package.
 
 
